Changed padding to margin to avoid overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #f2f2f2;
-  font-family: 'Source Sans Pro';
+  /* background-color: #f2f2f2; */
+  /* font-family: 'Source Sans Pro'; */
 }
